Add /dcc_info endpoint. Closes #8.
